# core

./: CMakeLists.txt
.github/workflows/: efi-build-develop-clang.yml
benchmark_uefi/: CMakeLists.txt  benchmark_main.cpp
cmake/: CompilerSetup.cmake
doc/: contracts.md
lib/platform_common/: compiler_warnings.h
lib/platform_efi/: enable_avx.h  uefi.h
src/: Qubic.vcxproj  Qubic.vcxproj.filters  four_q.h  public_settings.h  qubic.cpp
src/addons/: tx_status_request.h
src/contract_core/: contract_def.h  contract_exec.h  qpi_spectrum_impl.h
src/contracts/: QNS.h  QNSRegistry.h  QUtil.h  QVAULT.h  Qx.h  TestExampleA.h  TestExampleB.h  qpi.h
src/network_messages/: common_def.h  header.h  tick.h
src/platform/: concurrency.h  debugging.h  file_io.h  m256.h  read_write_lock.h  time.h  time_stamp_counter.h
test/: CMakeLists.txt  common_def.cpp  contract_qns_registry.cpp  contract_qvault.cpp  contract_testex.cpp  contract_testing.h  m256.cpp  math_lib.cpp  stdlib_impl.cpp  test.vcxproj  test.vcxproj.filters
